--- a/port.html
+++ b/port.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.pravatar.cc/120?img=3" alt="Profile Photo" class="avatar">
+        <img src="" alt="Profile Photo" class="avatar">
         <h1>Abishek</h1>
         <h2>Web Developer & Designer</h2>
         <p>
