--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-site-verification" content="fsls_u4XDFsDtiIZ8vyiEulH_i0-o7yanmRWQ8vAoTk" />
     <title>Abishek's Portfolio</title>
     <style>
         body {
