Updated meta tags and content for SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="google-site-verification" content="fsls_u4XDFsDtiIZ8vyiEulH_i0-o7yanmRWQ8vAoTk" />
+    <meta name="description" content="Abishek's personal portfolio - Web developer & software engineer showcasing skills, projects and resume.">
+    <meta name="keywords" content="Abishek, portfolio, web development, software engineer, GitHub, frontend, projects">
+    <meta name="author" content="Abishek">
+    <meta name="author" content="Abishek Palanisami">
+    <meta name="description" content="Portfolio of Abishek Palanisami - Software Developer, Web Enthusiast.">
+    <meta name="robots" content="index, follow">
+
     <title>Abishek's Portfolio</title>
     <style>
         body {
